[package]
name = "bind"
version = "0.1.0"
authors = ["oooutlk <oooutlk@outlook.com>"]
categories = ["development-tools"]
description = "Proc macro for binding values into an expression (usually a closure)"
edition = "2021"
keywords = [ "capture", "closure", "clone" ]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oooutlk/bind"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full","visit"] }
